# nvno

./: .gitignore  README.md  pyproject.toml
src/nvno/: __init__.py  __main__.py  app.py  autosave.py  editor.py  file_policy.py  fs.py  tabs.py  theme.py  tree.py
tests/: test_app.py  test_autosave.py  test_file_policy.py
